# WEB_10_Django

./: .gitignore  README.md  docker-compose.yml  docker-compose.yml~  pyproject.toml
quotes/: .env  .gitignore  utils.py~
quotes/quotes/: settings.py  settings.py~  urls.py  urls.py~
quotes/quotes/__pycache__/: settings.cpython-312.pyc.2620069333680  urls.cpython-312.pyc.1782301653936  urls.cpython-312.pyc.2045758995376  urls.cpython-312.pyc.2255482846128  urls.cpython-312.pyc.2287700016048  urls.cpython-312.pyc.2577539857328  urls.cpython-312.pyc.2878727715760
quotes/quotes_app/: forms.py  forms.py~  models.py  models.py~  urls.py  urls.py~  utils.py  views.py  views.py~
quotes/quotes_app/__pycache__/: urls.cpython-312.pyc.1821521873712  urls.cpython-312.pyc.1854098526000  urls.cpython-312.pyc.2380879035056  urls.cpython-312.pyc.2633437285168  views.cpython-312.pyc.1256852880944  views.cpython-312.pyc.1260186631600  views.cpython-312.pyc.1602644934192  views.cpython-312.pyc.1620590394928  views.cpython-312.pyc.1773383712304  views.cpython-312.pyc.1911022288304  views.cpython-312.pyc.2167379983792  views.cpython-312.pyc.2274572762544  views.cpython-312.pyc.2360184405424  views.cpython-312.pyc.2395558116912  views.cpython-312.pyc.2526796381616  views.cpython-312.pyc.2585948126768  views.cpython-312.pyc.2657210990128  views.cpython-312.pyc.2717974396464  (+3 more)
quotes/quotes_auth/: apps.py  forms.py  forms.py~  urls.py  urls.py~  views.py  views.py~
quotes/utils/: add_quotes_to_mongo.py  add_quotes_to_mongo.py~  authors.json  migration.py  migration.py~
(+28 files in other folders)
